Fix facebook button positioning on small screens

--- a/Code/web/css/style.css
+++ b/Code/web/css/style.css
@@ -195,6 +195,7 @@ footer a:hover {
 	float:left;
 	margin-left:.5em;
 	padding-top:.2em;
+	width: auto !important;
 }
 
 
